# FastApi-Project

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
src/repository/: photos.py
tests/: test_repository_comments.py  test_repository_photos.py  test_repository_qr_code.py  test_repository_tags.py  users.py
